iphone horizontal scroll issue

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -7,11 +7,13 @@
 
 html {
   height: 100%;
+  overflow-x: hidden;
 }
 
 body {
   height: 100%;
   overflow-y: auto;
+  overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
   -webkit-user-select: none;
 }
@@ -7313,6 +7315,88 @@ section.landing .register-form .form .form-content .input.birthday .gj-datepicke
   display: none;
   visibility: hidden;
 }
+
+footer.landing .tooltip {
+  position: relative;
+  float: right;
+  right: 4px;
+}
+
+@media only screen and (max-width: 600px) {
+  footer.landing .tooltip {
+    right: 95px;
+  }
+}
+@media only screen and (max-width: 400px) {
+  footer.landing .tooltip {
+    right: 120px;
+  }
+}
+
+footer.landing .tooltip .tooltiptext {
+  visibility: hidden;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -60px;
+  opacity: 0;
+  transition: opacity 0.3s;
+  font-size: 16px;
+  padding: 8px !important;
+  line-height: 25px;
+  border: 0 !important;
+  min-height: 28px;
+  z-index: 99999999999;
+}
+
+footer.landing .tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
+}
+
+footer.landing .tooltip .tooltiptext.show {
+  visibility: visible !important;
+  opacity: 1 !important;
+  width: auto !important;
+  height: auto !important;
+  margin: 0px !important;
+}
+
+footer.landing .tooltip .tooltiptext-right {
+  top: -5px;
+  left: 105%;
+}
+
+footer.landing .tooltip .tooltiptext-left {
+  left: -10vw;
+}
+
+footer.landing .tooltip .tooltiptext-top {
+  width: auto;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -60px; /* Use half of the width (120/2 = 60), to center the tooltip */
+}
+
+footer.landing .tooltip .tooltiptext-bottom {
+  max-width: 300px;
+  top: 100%;
+  left: 50%;
+  margin-left: -60px; /* Use half of the width (120/2 = 60), to center the tooltip */
+}
+
+footer.landing .tooltip .tooltiptext div {
+  width: max-content;
+  z-index: 99999999999;
+}
+
+
 .gj-icon.chevron-right:before {
   content: "\f006";
   font-family: "foxtail-icon" !important;
@@ -7411,6 +7495,7 @@ footer.landing .tooltip .tooltiptext.show {
   position: absolute;
     left: -10vw;
 }
+
 section.login-modal {
   width: 100%;
   height: 100%;
