--- a/src/components/Settings/Photos/UploadImageComponentStyle.css
+++ b/src/components/Settings/Photos/UploadImageComponentStyle.css
@@ -115,16 +115,17 @@
   white-space: nowrap;
 }
 
-.tooltip {
+.imgContainer .tooltip {
+  display: none;
   background-color: white;
   position: absolute;
   box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.04),
     0 13px 16px 0 rgba(66, 81, 110, 0.04);
   top: -75px;
-  right: -43px;
+  right: -44px;
 }
 
-.tooltip.priv {
+.imgContainer .tooltip.priv {
   right: -20px;
 }
 
@@ -141,10 +142,6 @@
   font-size: 12px;
   flex-direction: column;
   text-align: center;
-}
-
-.imgContainer .tooltip {
-  display: none;
 }
 
 @media only screen and (max-width: 700px) {
